# Glossa

./: .gitignore  README.md  google_translate_api.json  pyproject.toml
eval/dspy/: search_best_prompt_dspy.py
eval/wmt25-terminology/: README.md  evaluate_track1.py  evaluate_track1_local.py  evaluate_track1_utils.py  run_nmt_llm_eval.py
eval/wmt25-terminology/checkpoint/: glossa_track1_score_es_dict.json.alignment_checkpoint.json  glossa_track1_score_ru_dict.json.alignment_checkpoint.json
eval/wmt25-terminology/result/: glossa_track1_score_de_dict.json  glossa_track1_score_es_dict.json  glossa_track1_score_ru_dict.json  track1_score_dict.json
eval/wmt25-terminology/term-consistency/: README.md  docpreprocessor.py  requirements.txt  script_track1.py  script_track2.py  termbasedmetric.py  track2-sent-alignment.ipynb
eval/wmt25-terminology/visualization/: plot_3d_bleu_acc_cons.py  plot_effect_termmode.py  plot_ranking_correlation.py  plot_table_track1.py  plot_table_track1_main_results.py  plot_table_track2.py  plot_tradeoff.py  utils.py
translations/: admin.py  alignment.py  apps.py  dspy_models.py  models.py  signals.py  tests.py  trie.py  utils.py  views.py
translations/migrations/: 0020_add_target_language_isolation.py
translations/templates/translations/: add_modal.html  corpusentry_changelist.html  corpusentry_import_csv.html  eval_browser.html  eval_module.html  glossary_changelist.html  import_jsonl.html  login.html  logout.html  translate.html
tulun/: settings.py  urls.py
